Add home link logo

--- a/endeavors.html
+++ b/endeavors.html
@@ -23,25 +23,64 @@
     <div id="myendeavors">
       <h1 id="headerE">current endeavors</h1>
         <a href="index.html"><img id="homelink" src="https://static.tumblr.com/45555f24077ee8c2c8aab51831ba2fff/lzx9c32/JRWoa6iip/tumblr_static_tumblr_static__640.gif" alt="[return home]"></a>
+        <a href="index.html"><img id="homelink2"src="https://i.imgur.com/RYeROjy.png" alt="[return home]" style="height:40px;width:40px;" > </a>
         <div class="leftdir">
           <div id="left">
-            <a class="leftdir" href="places.html"><img src="http://i.imgur.com/cQTHsdF.jpg" alt="[my places]"></a>
-            <a class="leftdir" href="endeavors.html"><img src="http://i.imgur.com/BZJpIoA.jpg?1;" alt="[my about page]"></a>
-            <a class="leftdir" href="sourcecode.txt"><img src="http://i.imgur.com/h5FnAj9.jpg;" alt="[my home]"/></a>
+            <a class="leftdirpane" href="places.html"><img src="http://i.imgur.com/cQTHsdF.jpg" alt="[my places]"></a>
+            <a class="leftdirpane" href="writing.html"><img src="http://i.imgur.com/o3ZuK7B.jpg" alt="[my about page]"></a>
+            <a class="leftdirpane" href="https://github.com/zzstoatzz/stoat.world"><img src="http://i.imgur.com/h5FnAj9.jpg;" alt="[my home]"/></a>
           </div>
         </div>
         <div id="endeavdir">
           <ul>
-            <li><a href="#solidworks">solidworks model</a></li>
-            <li><a href="#currentbook">book</a></li>
-            <li><a href="#js">javascript</a></li>
+            <li><a href="#solidworks">Classes</a></li>
+            <li><a href="#currentbook">Book Reviews</a></li>
+            <li><a href="#js">Other</a></li>
           </ul>
         </div>
-        <p style="font-size:15px;margin-top:60px;">here i plan to document the in-progress <br> and 'completed' results of my mostly random motivations</p>
-        <div class="endeavpane">
+        <p style="font-size:15px;margin-top:60px;"><b>here i plan to document the in-progress <br> and 'completed' results of my spontaneous or obligatory motivations</b></p>
+        <div class="endeavpane" style="font-size:15px;">
           <a name="solidworks"></a>
-          <p>solidworks</p>
+          <h3>Classes</h3>
+          <ol>
+            <li><p><a href="#i1">MATH 216</a></p>
+            <p>Intro to Differential Equations -- The final class in the calc sequence necessary for engineers</p></li>
+            <li><p><a href="#i2">CHE 341</a></p>
+            <p>Fluid Mechanics -- the sister course to thermo for 2nd semester ChE sophomores</p></li>
+            <li><p><a href="#i3">CHE 330</a></p>
+            <p> Thermodynamics -- the big kahuna</p></li>
+            <li><p><a href="#i4">Evironmental Ethics</a></p></li>
+          </ol>
         </div>
+        <div class="endeavpane" style="font-size:15px;">
+          <a name="i1"></a>
+          <h3>MATH 216</h3>
+          <p><ul>
+            <li>As has been the case since starting to take real math classes in college, I enjoy this class. I also like my professor <a href="http://www-personal.umich.edu/~bilman/">Deniz Bilman</a> quite a lot so far. I spent about 5 hours learning about eigenvalues/eigenvectors today, which was new and relatively interesting.</li>
+          </ul</p>
+        </div>
+        <div class="endeavpane" style="font-size:15px;">
+          <a name="i2"></a>
+          <h3>CHE 341</h3>
+          <ul>
+            <li>Oh man, my professor is an interesting <a href="https://i.imgur.com/8L65b0y.jpg">cat.</a> He's about 60 years old and he loves to go on bird walks as Mr. Karasti might say. I think that we have covered approximately 2 concepts that were slated for lecture on the syllabus. In fact, there may come a time where I stop going to lecture (despite the fact that he's actually really a funny guy), becuase I could make much more efficient use of that hour.</li>
+          </ul>
+        </div>
+        <div class="endeavpane" style="font-size:15px;">
+          <a name="i3"></a>
+          <h3>CHE 330</h3>
+          <p>Yeah so this class is going to be hard. I read chapter 4 the other day (on entropy) and there were over 115 equations in that chapter alone. Granted, a lot of them are derivative of general ideas like the conservation of energy or entropy balances or something but still.. 115+. However, besides the introduction of entropy, the class hasn't yet surpassed CHE 230 in terms of breadth of subject material. <a href="https://che.engin.umich.edu/people/andrej-lenert/">My professor</a> is Canadian and extremely intelligent.</p>
+        </div>
+        <div class="endeavpane" style="font-size:15px;">
+          <a name="i4"></a>
+          <h3>PHIL 376</h3>
+          <p>This class is really an ethics class, only using the context of environmental issues to approach the fundamental inquiries of value and meaning and human experience in general. I wrote <a href="writings/phil376blog.html">THIS</a> for my first assignment.</p>
+        </div>
+        <br>
+        <a href="#">Back to Top</a>
+
+        <hr>
+
         <div class="endeavpane">
           <a name="currentbook"></a>
           <h3>"The Talisman" by Stephen King and Peter Straub</h3>
@@ -49,9 +88,21 @@
           <img src="https://upload.wikimedia.org/wikipedia/en/8/89/Talisman1983Cover.jpg" alt="<i>The Talisman</i>" style="height:80px; width:50px; position:relative; bottom:20px;left:250px;">
         </div>
         <div class="endeavpane">
-          <a name="js"></a>
-          <p>javascript</p>
+          <a name="currentbook"></a>
+          <h3>"1984" by George Orwell</h3>
+          <h5><i>1984</i> was a book that I started to read a few years ago, back when the main attraction of reading a book was to glean its exciting features. I didn't have any sort of political philosophy when I was 13, nor do I really have one at this time, but I now have the capacity to at least appreciate someone's political motives and how they manifest themselves in literature. The reason I threw the word politics out there right away is obvious if you've ever read the book. Orwell's piece de resistance is a critique of English socialism and Russian communism. At 19 years of age and nearly 80 years removed from the climate in which Orwell wrote 1984, this basic level is the extent of my true understanding of its allusion. However, there are many statements made by Orwell which require little historical background of 20th century political ideologies. For example, the most striking parts of the story for me occur when the eventual antagonist pulls the classic "I'm the villian and you're fucked so I'm going to tell you my evil plan" on the protagonist. This is where many of Orwells fierce resentments for the current state of politics rear their collective head as what appears to be a general misanthropy. To sort of switch gears though and deconstruct the tangibles of the book rather than its sociopolitical significance, I sometimes felt confused by the actions of Winston. Sometimes statements were made that suggested that he was eternally conditioned by the party to act in a certain way, but then you would find him defying these conditionings as the "stain" in the Party, but it never really seemed to be explained why he was a special case. I'm not sure, those are my thoughts. It's extremely thought provoking, I RECOMMEND! </h5>
+          <img src="https://images-na.ssl-images-amazon.com/images/I/41E9Z5XaHcL._SY346_.jpg" alt="1984" style="height:80px; width:50px; position:relative; bottom:20px;left:250px;">
         </div>
+
+        <a href="#">Back to Top</a>
+        <hr>
+
+        <div class="endeavpane">
+          <a name="js"></a>
+          <h3>Piezoelectric Occupancy Indicator</h3>
+        </div>
+        <a href="#">Back to Top</a>
+
     </div>
     <footer>
       <div id="socialmedia">
